added bold and italic text

--- a/blog.html
+++ b/blog.html
@@ -6,10 +6,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" type="text/css" href="main.css">
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="main.css">
     <meta
             name="Description"
             content="This page is a blogging section for B-Bike. A website for a company that does anything cycling">
@@ -50,15 +51,17 @@
         <div class="text-center">
             <img src="resources/bycicle6.jpg" class="image-fluid float-right rounded-sm" alt="Cycling" width="500" height="300">
             <div class="text_spacingblog2" >
-                <h3 class="text-center">History of bikes</h3>
+                <div class="textbg">
+                    <h3 class="text-center">History of bikes</h3>
 
-                <p>Bicycles were introduced in the 19th century in Europe, and by the early 21st century, more than 1
-                    billion were in existence at a given time. These numbers far exceed the number of cars, both in total
-                    and ranked by the number of individual models produced. They are the principal means of transportation
-                    in many regions.</p>
-                <p>They also provide a popular form of recreation, and have been adapted for use as children's toys, general
-                    fitness, military and police applications, courier services, bicycle racing, and bicycle stunts.</p>
-                <a href="https://en.wikipedia.org/wiki/Bicycle#History" class="btn btn-primary" role="button" target="_blank" rel="noopener">History wiki</a>
+                    <strong>Bicycles were introduced in the 19th century in Europe, and by the early 21st century, more than 1
+                        billion were in existence at a given time. These numbers far exceed the number of cars, both in total
+                        and ranked by the number of individual models produced. They are the principal means of transportation
+                        in many regions.</strong>
+                    <p>They also provide a popular form of recreation, and have been adapted for use as children's toys, general
+                        fitness, military and police applications, courier services, bicycle racing, and bicycle stunts.</p>
+                    <a href="https://en.wikipedia.org/wiki/Bicycle#History" class="btn btn-primary" role="button" target="_blank" rel="noopener">History wiki</a>
+                </div>
             </div>
         </div>
     </div>
@@ -71,13 +74,13 @@
 
                 <p>The most basic maintenance item is keeping the tires correctly inflated; this can make a noticeable
                     difference as to how the bike feels to ride. Bicycle tires usually have a marking on the side wall
-                    indicating the pressure appropriate for that tire. Note that bicycles use much higher pressures than
+                    indicating the pressure  appropriate for that tire. Note that bicycles use much higher pressures than
                     cars: car tires are normally in the range 30 to 40 pounds per square inch while bicycle tires are
                     normally in the range 60 to 100 pounds per square inch.</p>
 
-                <p> Another basic maintenance item is regular lubrication of the chain and pivot points for derailleurs and
+                <p><i>Another basic maintenance item is regular lubrication of the chain and pivot points for derailleurs and
                     brakes. Most of the bearings on a modern bike are sealed and grease-filled and require little or no
-                    attention; such bearings will usually last for 10,000 miles or more.</p>
+                    attention; such bearings will usually last for 10,000 miles or more.</i></p>
 
 
                 <a href="https://en.wikipedia.org/wiki/Bicycle#Maintenance" class="btn btn-primary wrap-center" role="button" target="_blank" rel="noopener">Maintenance wiki</a>
@@ -94,9 +97,9 @@
             <div class="text_spacingblog">
                 <h3 class="text-center">Cycling is green</h3>
 
-                <p>One of the profound economic implications of bicycle use is that it liberates the user from oil
+                <p><strong>One of the profound economic implications of bicycle use is that it liberates the user from oil
                     consumption.(Ballantine, 1972) The bicycle is an inexpensive, fast, healthy and environmentally
-                    friendly mode of transport.</p>
+                    friendly mode of transport.</strong></p>
                 <p>Ivan Illich stated that bicycle use extended the usable physical environment
                     for people, while alternatives such as cars and motorways degraded and confined people's
                     environment and mobility. Currently, two billion bicycles are in use around the world.</p>
