Adding an CSS animation to the index

--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
             </div>
         </div>
     </div>
+    <div class="animation">
+        <p class="d-inline mr-1">Ride safe with B-bike</p>
+        <img class="card-img-top small-im" src="resources/001-bycicle.png" alt="Card image cap">
+    </div>
 </div>
 
 <!-- Footer -->
