--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
 <div class="container">
 <div class="alert alert-danger" role="alert">
     <strong>COVID-19 measures -</strong>
-    <a href="https://www.info-coronavirus.be/nl/" target="_blank" class="alert-link">Respect the 5 customer rule, wear a mask and keep your distance please.</a>
+    <a href="https://www.info-coronavirus.be/nl/" rel=”noopener” target="_blank" class="alert-link">Respect the 5 customer rule, wear a mask and keep your distance please.</a>
     Thank you!
 </div>
 </div>
@@ -114,7 +114,7 @@
         </div>
         <div class="col-sm">
         <h2 class="pb-3">Phone us!</h2>
-        <a href="tel:555-555-5555"><img src="resources/phone-icon.png" alt="Icon of phone" height="50"></a>
+        <a class="hover-image" href="tel:555-555-5555"><img src="resources/phone-icon.png" alt="Icon of phone"></a>
             03/655.65.65
     </div>
     </div>
