add buy form and link to buy btn

--- a/services.html
+++ b/services.html
@@ -92,8 +92,8 @@
                         <p class="mb-0 text-muted">$85</p>
                         <div class="row">
                             <div class="col-md-12 text-center text-md-left text-md-right">
-                                <button class="btn btn-primary btn-rounded">
-                                    <i class="fas fa-cart-plus mr-2" aria-hidden="true"></i> BUY</button>
+                                <a href="buy.html" class="btn btn-primary btn-rounded">
+                                    <i class="fas fa-cart-plus mr-2" aria-hidden="true"></i> BUY</a>
                             </div>
                         </div>
                     </div>
@@ -111,8 +111,8 @@
                         <h5 class="card-title">Leather Belt</h5>
                         <p class="mb-0 text-muted">$70</p>
                         <div class="col-md-12 text-center text-md-left text-md-right">
-                            <button class="btn btn-primary btn-rounded">
-                                <i class="fas fa-cart-plus mr-2" aria-hidden="true"></i> BUY</button>
+                            <a href="buy.html" class="btn btn-primary btn-rounded">
+                                <i class="fas fa-cart-plus mr-2" aria-hidden="true"></i> BUY</a>
                         </div>
                     </div>
                 </div>
@@ -129,8 +129,8 @@
                         <h5 class="card-title">Leather Belt</h5>
                         <p class="mb-0 text-muted">$70</p>
                         <div class="col-md-12 text-center text-md-left text-md-right">
-                            <button class="btn btn-primary btn-rounded">
-                                <i class="fas fa-cart-plus mr-2" aria-hidden="true"></i> BUY</button>
+                            <a href="buy.html" class="btn btn-primary btn-rounded">
+                                <i class="fas fa-cart-plus mr-2" aria-hidden="true"></i> BUY</a>
                         </div>
                     </div>
                 </div>
@@ -147,8 +147,8 @@
                         <h5 class="card-title">Leather Belt</h5>
                         <p class="mb-0 text-muted">$70</p>
                         <div class="col-md-12 text-center text-md-left text-md-right">
-                            <button class="btn btn-primary btn-rounded">
-                                <i class="fas fa-cart-plus mr-2" aria-hidden="true"></i> BUY</button>
+                            <a href="buy.html" class="btn btn-primary btn-rounded">
+                                <i class="fas fa-cart-plus mr-2" aria-hidden="true"></i> BUY</a>
                         </div>
                     </div>
                 </div>
@@ -165,8 +165,8 @@
                         <h5 class="card-title">Leather Belt</h5>
                         <p class="mb-0 text-muted">$70</p>
                         <div class="col-md-12 text-center text-md-left text-md-right">
-                            <button class="btn btn-primary btn-rounded">
-                                <i class="fas fa-cart-plus mr-2" aria-hidden="true"></i> BUY</button>
+                            <a href="buy.html" class="btn btn-primary btn-rounded">
+                                <i class="fas fa-cart-plus mr-2" aria-hidden="true"></i> BUY</a>
                         </div>
                     </div>
                 </div>
@@ -183,8 +183,8 @@
                         <h5 class="card-title">Checkered shirt <span class="badge badge-success badge-pill align-text-bottom ml-1">-25%</span></h5>
                         <p class="mb-0 text-muted">$134</p>
                         <div class="col-md-12 text-center text-md-left text-md-right">
-                            <button class="btn btn-primary btn-rounded">
-                                <i class="fas fa-cart-plus mr-2" aria-hidden="true"></i> BUY</button>
+                            <a href="buy.html" class="btn btn-primary btn-rounded">
+                                <i class="fas fa-cart-plus mr-2" aria-hidden="true"></i> BUY</a>
                         </div>
                     </div>
                 </div>
@@ -223,7 +223,7 @@
             </div>
         </div>
         <div class="btn-visit text-center w-100 mt-3">
-            <a href="#" class="btn btn-primary text-center" style="width: 30%">Go somewhere</a>
+            <a href="contact.html" class="btn btn-primary text-center" style="width: 30%">Contact Us</a>
         </div>
     </section>
 </div>
