--- a/index.html
+++ b/index.html
@@ -53,8 +53,12 @@
         </div>
     </div>
 </div>
-
+GIT
 <div class="container">
+    <div class="text-center mt-3">
+        <h1>100% committed bike</h1>
+    </div>
+
     <div class="media border-bottom row py-5">
         <img class="d-flex align-self-center  img-thumbnail mx-5 col-sm-12" src="resources/bike1.jpg"
              alt="Generic placeholder image" style="max-height: 300px; max-width: 300px;">
