--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <title>Contact</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <link rel=”shortcut icon” type=”image/x-icon” href=”#”>
+    <link rel=”icon” type=”image/x-icon” href=”https://raw.githubusercontent.com/awet100/B-bike.com/master/resources/favicon.ico”>
     <link rel="stylesheet" href="main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
