--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="keywords" content="Bike, electrical, Antwerpen,">
+    <meta name="keywords" content="Bike, electrical, Antwerpen, cycling,  repairs">
+    <meta name="author" content="Awet Tesfay, Michiel Coulier, Frank Nsuki, Whitney Aboikoni, Lea Dalibard">
+    <meta name="description" content="We have everything to get you started on the bike from beginners to experienced veterans. We sell, buy and repair all in one. Check our website for more information.">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -47,16 +49,16 @@
 <div class="parallax ">
     <div class="wrap-center row">
         <div class="banner-centered col" id="banner-text">
-            <h2 class="mb-0">Welcome to <strong>B-bike</strong><span class="hiddedM">, have a ride on our site</span>
+            <h2 class="mb-0">Welcome to <strong class="text-danger">B-bike</strong><span class="hiddedM">, have a ride on our site</span>
             </h2>
             <a href="services.html" class="btn btn-outline-light mt-4 text-uppercase">Discover our bikes</a>
         </div>
     </div>
 </div>
-GIT
+
 <div class="container">
     <div class="text-center mt-3">
-        <h1>100% committed bike</h1>
+        <h1>100% <strong class="text-danger">committed</strong> bike</h1>
     </div>
 
     <div class="media border-bottom row py-5">
