aligned text to left/right and added bycicle animation

--- a/blog.html
+++ b/blog.html
@@ -6,11 +6,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
-
+    <link rel="stylesheet" type="text/css" href="main.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="main.css">
+
     <meta
             name="Description"
             content="This page is a blogging section for B-Bike. A website for a company that does anything cycling">
@@ -48,11 +48,11 @@
     <h1 class="text-center"></h1>
     <div class="container pt-5 mt-4 d-flex flex-row">
         <br>
-        <div class="text-center">
+        <div class="text-left">
             <img src="resources/bycicle6.jpg" class="image-fluid float-right rounded-sm" alt="Cycling" width="500" height="300">
             <div class="text_spacingblog2" >
                 <div class="textbg">
-                    <h3 class="text-center">History of bikes</h3>
+                    <h3 class="text-left">History of bikes</h3>
 
                     <strong>Bicycles were introduced in the 19th century in Europe, and by the early 21st century, more than 1
                         billion were in existence at a given time. These numbers far exceed the number of cars, both in total
@@ -67,10 +67,10 @@
     </div>
     <hr>
     <div class="container pt-5 mt-4 d-flex flex-row">
-        <div class=" text-center">
+        <div class=" text-right">
             <img src="resources/bycicle7.jpg" class="image-fluid float-left rounded-sm" alt="Cycling" width="325" height="350">
             <div class="text_spacingblog">
-                <h3 class="text-center">Maintenance</h3>
+                <h3 class="text-right">Maintenance</h3>
 
                 <p>The most basic maintenance item is keeping the tires correctly inflated; this can make a noticeable
                     difference as to how the bike feels to ride. Bicycle tires usually have a marking on the side wall
@@ -92,10 +92,10 @@
         <br>
     <hr>
     <div class="container pt-5 mt-2 d-flex flex-row">
-        <div class="text-center">
+        <div class="text-left">
             <img src="resources/bycicle8.jpg" class="image-fluid float-right rounded-sm" alt="Cycling" width="500" height="300">
             <div class="text_spacingblog">
-                <h3 class="text-center">Cycling is green</h3>
+                <h3 class="text-left">Cycling is green</h3>
 
                 <p><strong>One of the profound economic implications of bicycle use is that it liberates the user from oil
                     consumption.(Ballantine, 1972) The bicycle is an inexpensive, fast, healthy and environmentally
@@ -108,6 +108,10 @@
         </div>
     </div>
         <br>
+    <div class="container pt-5 mt-2 d-flex flex-row">
+        <img src="resources/bycicle-icon.png" alt="bycicle" class="bycicleani">
+    </div>
+
 
     <!-- Footer -->
     <footer class="page-footer font-small text-light bg-dark ">
