Correcting semantic and adding color text in index.html

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <div class="parallax ">
     <div class="wrap-center row">
         <div class="banner-centered col" id="banner-text">
-            <h2 class="mb-0">Welcome to <strong class="text-danger">B-bike</strong><span class="hiddedM">, have a ride on our site</span>
+            <h2 class="mb-0">Welcome to <strong class="text-primary">B-bike</strong><span class="hiddedM">, have a ride on our site</span>
             </h2>
             <a href="services.html" class="btn btn-outline-light mt-4 text-uppercase">Discover our bikes</a>
         </div>
@@ -58,7 +58,7 @@
 
 <div class="container">
     <div class="text-center mt-3">
-        <h1>100% <strong class="text-danger">committed</strong> bike</h1>
+        <h1>100% <strong class="text-primary">committed</strong> bike</h1>
     </div>
 
     <div class="media border-bottom row py-5">
@@ -102,7 +102,7 @@
         <div class="card border-0">
             <div class="card-body">
                 <img class="card-img-top small-im" src="resources/003-settings.png" alt="Card image cap">
-                <h3 class="card-title">Maintenance</h3>
+                <h3 class="card-title ">Maintenance</h3>
                 <p class="card-text">We are a full-service bike repair shop. From fixing a flat tire
                     to a comprehensive tune-up, we can have you road-ready in no time.</p>
             </div>
@@ -118,7 +118,7 @@
         <div class="card border-0 ">
             <div class="card-body">
                 <img class="card-img-top small-im" src="resources/002-credit-card.png" alt="Card image cap">
-                <h3 class="card-title">Payment</h3>
+                <h3 class="card-title ">Payment</h3>
                 <p class="card-text">For the purchase of your <strong>B-bike</strong>, we offer you payment facility.
                     You have the
                     opportunity to pay in three times without fees.</p>
@@ -126,7 +126,7 @@
         </div>
     </div>
     <div class="animation">
-        <p class="d-inline mr-1">Ride safe with B-bike</p>
+        <p class="d-inline mr-1 text-primary">Ride safe with B-bike</p>
         <img class="card-img-top small-im" src="resources/001-bycicle.png" alt="Card image cap">
     </div>
 </div>
