Correcting html semantic in index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="keywords" content="Bike, electrical, Antwerpen, cycling,  repairs">
     <meta name="author" content="Awet Tesfay, Michiel Coulier, Frank Nsuki, Whitney Aboikoni, Lea Dalibard">
-    <meta name="description" content="We have everything to get you started on the bike from beginners to experienced veterans. We sell, buy and repair all in one. Check our website for more information.">
+    <meta name="description"
+          content="We have everything to get you started on the bike from beginners to experienced veterans. We sell, buy and repair all in one. Check our website for more information.">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -49,56 +50,66 @@
 <div class="parallax ">
     <div class="wrap-center row">
         <div class="banner-centered col" id="banner-text">
-            <h2 class="mb-0">Welcome to <strong class="text-primary">B-bike</strong><span class="hiddedM">, have a ride on our site</span>
+            <h2 class="mb-0">Welcome to <strong class="text-primary font-weight-bold">B-bike</strong><span
+                    class="hiddedM">, have a ride on our site</span>
             </h2>
             <a href="services.html" class="btn btn-outline-light mt-4 text-uppercase">Discover our bikes</a>
         </div>
     </div>
 </div>
 
-<div class="container">
-    <div class="text-center mt-3">
-        <h1>100% <strong class="text-primary">committed</strong> bike</h1>
-    </div>
+<main class="container">
+    <article>
+        <div class="text-center py-5">
+            <h1>100% <strong class="text-primary font-weight-bold">committed</strong> bike</h1>
+        </div>
 
-    <div class="media border-bottom row py-5">
-        <img class="d-flex align-self-center  img-thumbnail mx-5 col-sm-12" src="resources/bike1.jpg"
-             alt="Generic placeholder image" style="max-height: 300px; max-width: 300px;">
-        <div class="media-body col-sm-12">
-            <h2 class="mt-0">The bike</h2>
-            <p><strong>B-bike</strong> have been designed to offer optimal comfort in the streets of Antwerpen. Its wide
-                saddle, large
-                wheels and front suspension help to tame cobblestones and tram rails. Thanks to its electric assistance
-                up to 25 km / h, you won’t feel the hills of Antwerpen.</p>
-            <p class="mb-0">In conjunction with your B-bike hire, you can also hire equipment to transport your
-                children.</p>
-        </div>
-    </div>
-    <div class="media border-bottom row  py-5">
-        <div class="media-body col-sm-12">
-            <h2 class="mt-0">Sustainability</h2>
-            <p>Through developing personalised solutions that facilitate and encourage people to transition to cycling,
-                <strong>B-bike</strong> contributes to a higher quality of life.</p>
-            <p class="mb-0">We manufacture all of our products with clean and renewable energy provided by the sun from
-                the PV farm that we own. By owning a B-Bike you become a part of the community that cares for the
-                sustainability of our planet.</p>
-        </div>
-        <img class="d-flex align-self-center img-thumbnail col-sm-12 mx-5" src="resources/bike3.jpg"
-             style="max-height: 300px; max-width: 300px;" alt="Generic placeholder image">
-    </div>
-    <div class="media row py-5">
-        <img class="d-flex align-self-center  img-thumbnail col-sm-12 mx-5" src="resources/bike4.jpg"
-             alt="Generic placeholder image" style="max-height: 300px; max-width: 300px;">
-        <div class="media-body col-sm-12">
-            <h2 class="mt-0">Cycle repair and workshop services</h2>
-            <p>Our fully equipped workshops are class leading. We handle all bicycle repairs from simple puncture fixes
-                through to complex builds and repairs. Our mechanics are Cytech-qualified and trained on Bromptons, hub
-                gears and electronic drivetrains as well as more unusual repairs..</p>
-            <p class="mb-0">For help, information or to make a booking please go to our <a href="contact.html">contact
-                form.</a></p>
-        </div>
-    </div>
-    <div class="card-group mt-3  mb-5 text-center">
+        <section class="media border-bottom row pb-5">
+            <img class="d-flex align-self-center  img-thumbnail mx-5 col-sm-12" src="resources/bike1.jpg"
+                 alt="Generic placeholder image" style="max-height: 300px; max-width: 300px;">
+            <div class="media-body col-sm-12">
+                <h2 class="mt-0">The bike</h2>
+                <p><strong>B-bike</strong> have been designed to offer optimal comfort in the streets of Antwerpen. Its
+                    wide
+                    saddle, large
+                    wheels and front suspension help to tame cobblestones and tram rails. Thanks to its electric
+                    assistance
+                    up to 25 km / h, you won’t feel the hills of Antwerpen.</p>
+                <p class="mb-0">In conjunction with your B-bike hire, you can also hire equipment to transport your
+                    children.</p>
+            </div>
+        </section>
+        <section class="media border-bottom row  py-5">
+            <div class="media-body col-sm-12">
+                <h2 class="mt-0">Sustainability</h2>
+                <p>Through developing personalised solutions that facilitate and encourage people to transition to
+                    cycling,
+                    <strong>B-bike</strong> contributes to a higher quality of life.</p>
+                <p class="mb-0">We manufacture all of our products with clean and renewable energy provided by the sun
+                    from
+                    the PV farm that we own. By owning a B-Bike you become a part of the community that cares for the
+                    sustainability of our planet.</p>
+            </div>
+            <img class="d-flex align-self-center img-thumbnail col-sm-12 mx-5" src="resources/bike3.jpg"
+                 style="max-height: 300px; max-width: 300px;" alt="Generic placeholder image">
+        </section>
+        <section class="media row py-5">
+            <img class="d-flex align-self-center  img-thumbnail col-sm-12 mx-5" src="resources/bike4.jpg"
+                 alt="Generic placeholder image" style="max-height: 300px; max-width: 300px;">
+            <div class="media-body col-sm-12">
+                <h2 class="mt-0">Cycle repair and workshop services</h2>
+                <p>Our fully equipped workshops are class leading. We handle all bicycle repairs from simple puncture
+                    fixes
+                    through to complex builds and repairs. Our mechanics are Cytech-qualified and trained on Bromptons,
+                    hub
+                    gears and electronic drivetrains as well as more unusual repairs..</p>
+                <p class="mb-0">For help, information or to make a booking please go to our <a href="contact.html">contact
+                    form.</a></p>
+            </div>
+        </section>
+    </article>
+    <article>
+    <section class="card-group mt-3  mb-5 text-center">
         <div class="card border-0">
             <div class="card-body">
                 <img class="card-img-top small-im" src="resources/003-settings.png" alt="Card image cap">
@@ -124,12 +135,13 @@
                     opportunity to pay in three times without fees.</p>
             </div>
         </div>
-    </div>
+    </section>
+    </article>
     <div class="animation">
-        <p class="d-inline mr-1 text-primary">Ride safe with B-bike</p>
+        <p class="d-inline mr-1 text-primary">Ride safe with <strong class="font-weight-bold">B-bike</strong></p>
         <img class="card-img-top small-im" src="resources/001-bycicle.png" alt="Card image cap">
     </div>
-</div>
+</main>
 
 <!-- Footer -->
 <footer class="page-footer font-small text-light bg-dark ">
