--- a/services.html
+++ b/services.html
@@ -40,8 +40,7 @@
     </div>
 </nav>
 
-
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -49,32 +48,53 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
     </ol>
-    <div class="carousel-inner h-100" role="listbox">
+    <div class="carousel-inner">
         <div class="carousel-item active">
-            <img class="d-block w-100" src="resources/bike1.jpg" alt="900x400" data-holder-rendered="true">
+            <img src="resources/modern-bike.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block mb-5">
+                <h3 class="text-capitalize text-white">modern bike for sale</h3>
+                <p>They are of different type, have it and ride safely!</p>
+            </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="resources/bike2.jpg" data-src="holder.js/900x400?theme=industrial" alt="900x400" data-holder-rendered="true">
+            <img src="resources/bike-service.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block mb-5">
+                <h3 class="text-capitalize">get full service</h3>
+                <p>We offer our customer with full service for their bikes</p>
+            </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="resources/bike3.jpg" data-src="holder.js/900x400?theme=industrial" alt="900x400"  data-holder-rendered="true">
+            <img src="resources/bike-rice.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block mb-5">
+                <h3 class="text-capitalize text-white">bike for rice</h3>
+                <p>We also give bike support for cyclist customers</p>
+            </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100 h-auto" src="resources/bike4.jpg" data-src="holder.js/900x400?theme=industrial" alt="900x400"  data-holder-rendered="true">
+            <img src="resources/repair-bike.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block mb-5">
+                <h3 class="text-capitalize text-white">mobile service</h3>
+                <p>We have mobile service as well, we are always there for you.</p>
+            </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="resources/bike10.jpg" data-src="holder.js/900x400?theme=industrial" alt="900x400"  data-holder-rendered="true">
+            <img src="resources/enjoy-ride.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block mb-5">
+                <h3 class="text-capitalize text-white">enjoy your riding</h3>
+                <p>Just contact as any thing. and ride safe.</p>
+            </div>
         </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
     </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
     </a>
 </div>
+
 <div class="container mt-sm-5">
     <section>
         <h3 class="font-weight-bold mb-5 text-center">Different Kinds Of Bike</h3>
@@ -227,6 +247,7 @@
         </div>
     </section>
 </div>
+
 
 <footer class="page-footer font-small text-light bg-dark ">
     <div class="container pt-5">
