added button that links to contact form

--- a/blog.html
+++ b/blog.html
@@ -104,6 +104,10 @@
         </div>
     </div>
         <br>
+    <hr>
+    <div class="container pt-5 mt-2 d-flex flex-row">
+        <a href="https://awet100.github.io/B-bike.com/contact.html" class="btn btn-primary wrap-center" role="button">Contact Us</a>
+    </div>
     <div class="container pt-5 mt-2 d-flex flex-row">
         <img src="resources/bycicle-icon.png" alt="bycicle" class="bycicleani">
     </div>
