--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,12 @@
 <head>
     <title>Contact</title>
     <!-- Required meta tags -->
+    <link rel="stylesheet" href="main.css">
     <meta charset="utf-8">
     <link rel=”icon” type=”image/x-icon” href=”https://raw.githubusercontent.com/awet100/B-bike.com/master/resources/favicon.ico”>
-    <link rel="stylesheet" href="main.css">
+    <meta name="keywords" content="Bike, electrical, Antwerpen, cycling,  repairs">
+    <meta name="description" content="We have everything to get you started on the bike from beginners to experienced veterans. We sell, buy and repair all in one. Check our website for more information.">
+    <meta name="author" content="Awet Tesfay, Michiel Coulier, Frank Nsuki, Whitney Aboikoni, Lea Dalibard">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
