--- a/services.html
+++ b/services.html
@@ -59,7 +59,7 @@
         <div class="carousel-item">
             <img src="resources/bike-service.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block mb-5">
-                <h3 class="text-capitalize">get full service</h3>
+                <h3 class="text-capitalize text-white">get full service</h3>
                 <p>We offer our customer with full service for their bikes</p>
             </div>
         </div>
