--- a/blog.html
+++ b/blog.html
@@ -14,13 +14,17 @@
     <meta
             name="Description"
             content="This page is a blogging section for B-Bike. A website for a company that does anything cycling">
+    <meta name="keywords" content="Bike, electrical, Antwerpen, cycling,  repairs">
+    <meta name="description" content="We have everything to get you started on the bike from beginners to experienced veterans. We sell, buy and repair all in one. Check our website for more information.">
+    <meta name="author" content="Awet Tesfay, Michiel Coulier, Frank Nsuki, Whitney Aboikoni, Lea Dalibard">
 </head>
 <body>
 
 <div id="otherfont">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">B-bike</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -35,8 +39,8 @@
                 <li class="nav-item text-capitalize">
                     <a class="nav-link" href="services.html">service</a>
                 </li>
-                <li class="nav-item active text-capitalize">
-                    <a class="nav-link" href="blog.html">blog</a>
+                <li class="nav-item text-capitalize">
+                    <a class="nav-link active" href="blog.html">blog</a>
                 </li>
                 <li class="nav-item text-capitalize">
                     <a class="nav-link" href="contact.html">contact</a>
@@ -58,7 +62,7 @@
                         in many regions.</strong>
                     <p>They also provide a popular form of recreation, and have been adapted for use as children's toys, general
                         fitness, military and police applications, courier services, bicycle racing, and bicycle stunts.</p>
-                    <a href="https://en.wikipedia.org/wiki/Bicycle#History" class="btn btn-primary" role="button" target="_blank" rel="noopener">History wiki</a>
+                    <a href="https://en.wikipedia.org/wiki/Bicycle#History" class="btn btn-secondary" role="button" target="_blank" rel="noopener">History wiki</a>
                 </div>
         </div>
     </div>
@@ -80,7 +84,7 @@
                         attention; such bearings will usually last for 10,000 miles or more.</i></p>
 
 
-                    <a href="https://en.wikipedia.org/wiki/Bicycle#Maintenance" class="btn btn-primary wrap-center" role="button" target="_blank" rel="noopener">Maintenance wiki</a>
+                    <a href="https://en.wikipedia.org/wiki/Bicycle#Maintenance" class="btn btn-secondary wrap-center" role="button" target="_blank" rel="noopener">Maintenance wiki</a>
                 </div>
         </div>
 
@@ -99,14 +103,14 @@
                     <p>Ivan Illich stated that bicycle use extended the usable physical environment
                         for people, while alternatives such as cars and motorways degraded and confined people's
                         environment and mobility. Currently, two billion bicycles are in use around the world.</p>
-                    <a href="https://en.wikipedia.org/wiki/Bicycle#Environmental_impact" class="btn btn-primary" role="button" target="_blank" rel="noopener">Environment wiki</a>
+                    <a href="https://en.wikipedia.org/wiki/Bicycle#Environmental_impact" class="btn btn-secondary" role="button" target="_blank" rel="noopener">Environment wiki</a>
                 </div>
         </div>
     </div>
         <br>
     <hr>
     <div class="container pt-5 mt-2 d-flex flex-row">
-        <a href="https://awet100.github.io/B-bike.com/contact.html" class="btn btn-primary wrap-center" role="button">Contact Us</a>
+        <a href="https://awet100.github.io/B-bike.com/contact.html" class="btn btn-secondary wrap-center" role="button">Contact Us</a>
     </div>
     <div class="container pt-5 mt-2 d-flex flex-row">
         <img src="resources/bycicle-icon.png" alt="bycicle" class="bycicleani">
