chaged color of h3 to match home

--- a/blog.html
+++ b/blog.html
@@ -55,7 +55,7 @@
         <div class="text-left">
             <img src="resources/bycicle6.jpg" class="image-fluid float-right rounded-sm" alt="Cycling" width="500" height="300">
                 <div class="padding1">
-                    <h3 class="text-left">History of bikes</h3>
+                    <h3 class="text-left text-primary">History of bikes</h3>
                     <strong>Bicycles were introduced in the 19th century in Europe, and by the early 21st century, more than 1
                         billion were in existence at a given time. These numbers far exceed the number of cars, both in total
                         and ranked by the number of individual models produced. They are the principal means of transportation
@@ -71,7 +71,7 @@
         <div class=" text-right">
             <img src="resources/bycicle7.jpg" class="image-fluid float-left rounded-sm" alt="Cycling" width="325" height="350">
                 <div class="padding2">
-                    <h3 class="text-right">Maintenance</h3>
+                    <h3 class="text-right text-primary">Maintenance</h3>
 
                     <p>The most basic maintenance item is keeping the tires correctly inflated; this can make a noticeable
                         difference as to how the bike feels to ride. Bicycle tires usually have a marking on the side wall
@@ -96,7 +96,7 @@
         <div class="text-left">
             <img src="resources/bycicle8.jpg" class="image-fluid float-right rounded-sm" alt="Cycling" width="500" height="300">
                 <div class="padding1">
-                    <h3 class="text-left">Cycling is green</h3>
+                    <h3 class="text-left text-primary">Cycling is green</h3>
                     <p><strong>One of the profound economic implications of bicycle use is that it liberates the user from oil
                         consumption.(Ballantine, 1972) The bicycle is an inexpensive, fast, healthy and environmentally
                         friendly mode of transport.</strong></p>
