--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 </nav>
 
-<div class="parallax ">
+<header class="parallax ">
     <div class="wrap-center row">
         <div class="banner-centered col" id="banner-text">
             <h2 class="mb-0">Welcome to <strong class="text-primary font-weight-bold">B-bike</strong><span
@@ -56,7 +56,7 @@
             <a href="services.html" class="btn btn-outline-light mt-4 text-uppercase">Discover our bikes</a>
         </div>
     </div>
-</div>
+</header>
 
 <main class="container">
     <article>
@@ -181,7 +181,7 @@
 
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
-        <a href="https://mdbootstrap.com/"> B-bike, Inc.</a>
+        <a href="index.html"> B-bike, Inc.</a>
     </div>
     <!-- Copyright -->
 
