--- a/index.html
+++ b/index.html
@@ -147,16 +147,17 @@
 <footer class="page-footer font-small text-light bg-dark ">
     <div class="container pt-5">
         <div class="row ">
-            <div class="col-sm-12 col-4">
+            <div class="col-sm">
                 <h3 class="text-light">B-bike</h3>
                 <p class="hiddedM">
                     Tolhuis,<br>
                     Sint-Pietersvliet 7,<br>
-                    2000 Antwerpen
+                    2000 Antwerpen<br>
+                    <a href="mailto:b-bike@gmail.com">b-bike@gmail.com</a>
                 </p>
-                <p class="hiddedM">Phone : 03/655.65.65</p>
+                <p class="hiddedM">Phone : 555-555-5555</p>
             </div>
-            <div class="col-sm-12 col-8">
+            <div class="col-sm">
                 <table class="table text-light ">
                     <thead>
                     <tr class="text-center">
@@ -181,11 +182,9 @@
 
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
-        <a href="index.html"> B-bike, Inc.</a>
+        B-bike, Inc.
     </div>
     <!-- Copyright -->
-
-
 </footer>
 <!-- Footer -->
 
