add discription of the product

--- a/services.html
+++ b/services.html
@@ -1,13 +1,18 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>services and product</title>
+    <title>B-Bike Service</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="keywords" content="Bike, electrical, Antwerpen, cycling,  repairs">
+    <meta name="author" content="Awet Tesfay, Michiel Coulier, Frank Nsuki, Whitney Aboikoni, Lea Dalibard">
+    <meta name="description"
+          content="We have everything to get you started on the bike from beginners to experienced veterans. We sell, buy and repair all in one. Check our website for more information.">
+
     <!-- Bootstrap CSS -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
 </head>
@@ -104,11 +109,11 @@
                     <div class="view overlay">
                         <img src="resources/sale1.jpg" class="card-img-top" alt="">
                         <a>
-                            <div class="mask rgba-white-slight waves-effect waves-light"></div>
+                            <div class="mask rgba-white-slight waves-effect waves-light container">Mountain Bicycles are design for riding rough off-road trails.</div>
                         </a>
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">Jeans Shoes <span class="badge badge-primary badge-pill align-text-bottom ml-1">New</span></h5>
+                        <h5 class="card-title">Mountain Bicycle <span class="badge badge-primary badge-pill align-text-bottom ml-1">New</span></h5>
                         <p class="mb-0 text-muted">$85</p>
                         <div class="row">
                             <div class="col-md-12 text-center text-md-left text-md-right">
@@ -124,11 +129,11 @@
                     <div class="view overlay">
                         <img src="resources/sale2.jpg" class="card-img-top" alt="">
                         <a>
-                            <div class="mask rgba-white-slight waves-effect waves-light"></div>
+                            <div class="mask rgba-white-slight waves-effect waves-light container">Touring bicycles are another special type of road bike.</div>
                         </a>
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">Leather Belt</h5>
+                        <h5 class="card-title">Touring bicycles</h5>
                         <p class="mb-0 text-muted">$70</p>
                         <div class="col-md-12 text-center text-md-left text-md-right">
                             <a href="buy.html" class="btn btn-primary btn-rounded">
@@ -142,11 +147,11 @@
                     <div class="view overlay">
                         <img src="resources/sale3.jpg" class="card-img-top" alt="">
                         <a>
-                            <div class="mask rgba-white-slight waves-effect waves-light"></div>
+                            <div class="mask rgba-white-slight waves-effect waves-light container">Hybrid Bicycles were originally conceived for road bikes and mountain.</div>
                         </a>
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">Leather Belt</h5>
+                        <h5 class="card-title">Hybrid Bicycle</h5>
                         <p class="mb-0 text-muted">$70</p>
                         <div class="col-md-12 text-center text-md-left text-md-right">
                             <a href="buy.html" class="btn btn-primary btn-rounded">
@@ -160,11 +165,11 @@
                     <div class="view overlay">
                         <img src="resources/sale4.jpg" class="card-img-top" alt="">
                         <a>
-                            <div class="mask rgba-white-slight waves-effect waves-light"></div>
+                            <div class="mask rgba-white-slight waves-effect waves-light container">Kid bike that is more convenient for kids and it is safe for train your kids</div>
                         </a>
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">Leather Belt</h5>
+                        <h5 class="card-title">kids bike</h5>
                         <p class="mb-0 text-muted">$70</p>
                         <div class="col-md-12 text-center text-md-left text-md-right">
                             <a href="buy.html" class="btn btn-primary btn-rounded">
@@ -178,11 +183,11 @@
                     <div class="view overlay">
                         <img src="resources/sale5.jpg" class="card-img-top" alt="">
                         <a>
-                            <div class="mask rgba-white-slight waves-effect waves-light"></div>
+                            <div class="mask rgba-white-slight waves-effect waves-light container">Road bicycles are designed to be ridden fast on smooth pavement. </div>
                         </a>
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">Leather Belt</h5>
+                        <h5 class="card-title">Road bicycle</h5>
                         <p class="mb-0 text-muted">$70</p>
                         <div class="col-md-12 text-center text-md-left text-md-right">
                             <a href="buy.html" class="btn btn-primary btn-rounded">
@@ -196,11 +201,11 @@
                     <div class="view overlay">
                         <img src="resources/sale6.jpg" class="card-img-top" alt="">
                         <a>
-                            <div class="mask rgba-white-slight waves-effect waves-light"></div>
+                            <div class="mask rgba-white-slight waves-effect waves-light container">Cyclocross bicycles are a special type of road bike.</div>
                         </a>
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">Checkered shirt <span class="badge badge-success badge-pill align-text-bottom ml-1">-25%</span></h5>
+                        <h5 class="card-title">Cyclocross bicycle <span class="badge badge-success badge-pill align-text-bottom ml-1">-25%</span></h5>
                         <p class="mb-0 text-muted">$134</p>
                         <div class="col-md-12 text-center text-md-left text-md-right">
                             <a href="buy.html" class="btn btn-primary btn-rounded">
