Adding a non-full black font

--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@
         <div class="row ">
             <div class="col-sm">
                 <h3 class="text-light">B-bike</h3>
-                <p class="hiddedM">
+                <p class="hiddedM text-light">
                     Tolhuis,<br>
                     Sint-Pietersvliet 7,<br>
                     2000 Antwerpen<br>
                     <a href="mailto:b-bike@gmail.com">b-bike@gmail.com</a>
                 </p>
-                <p class="hiddedM">Phone : 555-555-5555</p>
+                <p class="hiddedM text-light">Phone : 555-555-5555</p>
             </div>
             <div class="col-sm">
                 <table class="table text-light ">
