--- a/blog.html
+++ b/blog.html
@@ -19,41 +19,38 @@
     <meta name="author" content="Awet Tesfay, Michiel Coulier, Frank Nsuki, Whitney Aboikoni, Lea Dalibard">
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">B-bike</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-<div id="otherfont">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">B-bike</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item text-capitalize">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item text-capitalize">
-                    <a class="nav-link" href="aboutus.html">about us</a>
-                </li>
-                <li class="nav-item text-capitalize">
-                    <a class="nav-link" href="services.html">service</a>
-                </li>
-                <li class="nav-item text-capitalize">
-                    <a class="nav-link active" href="blog.html">blog</a>
-                </li>
-                <li class="nav-item text-capitalize">
-                    <a class="nav-link" href="contact.html">contact</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item text-capitalize">
+                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item text-capitalize">
+                <a class="nav-link" href="aboutus.html">about us</a>
+            </li>
+            <li class="nav-item text-capitalize">
+                <a class="nav-link" href="services.html">service</a>
+            </li>
+            <li class="nav-item text-capitalize active">
+                <a class="nav-link" href="blog.html">blog</a>
+            </li>
+            <li class="nav-item text-capitalize">
+                <a class="nav-link" href="contact.html">contact</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
     <h1 class="text-center"></h1>
     <div class="container pt-5 mt-4 d-flex flex-row">
         <br>
         <div class="text-left">
-            <img src="resources/bycicle6.jpg" class="image-fluid float-right rounded-sm" alt="Cycling" width="500" height="300">
+            <img src="resources/bycicle6.jpg" class="image-fluid float-right rounded-sm pl-3" alt="Cycling" width="500" height="300">
                 <div class="padding1">
                     <h3 class="text-left text-primary">History of bikes</h3>
                     <strong>Bicycles were introduced in the 19th century in Europe, and by the early 21st century, more than 1
@@ -69,7 +66,7 @@
     <hr>
     <div class="container pt-5 mt-4 d-flex flex-row">
         <div class=" text-right">
-            <img src="resources/bycicle7.jpg" class="image-fluid float-left rounded-sm" alt="Cycling" width="325" height="350">
+            <img src="resources/bycicle7.jpg" class="image-fluid float-left rounded-sm pr-4" alt="Cycling" width="325" height="350">
                 <div class="padding2">
                     <h3 class="text-right text-primary">Maintenance</h3>
 
@@ -162,7 +159,6 @@
             <a href="https://mdbootstrap.com/"> B-bike, Inc.</a>
         </div>
         <!-- Copyright -->
-</div>
 
 </footer>
 
