--- a/blog.html
+++ b/blog.html
@@ -5,20 +5,20 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" type="text/css" href="main.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
-
     <meta
             name="Description"
             content="This page is a blogging section for B-Bike. A website for a company that does anything cycling">
     <meta name="keywords" content="Bike, electrical, Antwerpen, cycling,  repairs">
     <meta name="description" content="We have everything to get you started on the bike from beginners to experienced veterans. We sell, buy and repair all in one. Check our website for more information.">
     <meta name="author" content="Awet Tesfay, Michiel Coulier, Frank Nsuki, Whitney Aboikoni, Lea Dalibard">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="bg-light">
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">B-bike</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -115,52 +115,47 @@
 
 
     <!-- Footer -->
-    <footer class="page-footer font-small text-light bg-dark ">
-        <div class="container">
-            <div class=" mt-3 d-flex flex-row pt-5">
-                <div class="p-2 m-3 w-25 row">
-                    <div class="card-body col">
-                        <h3 class="card-title text-light">B-bike</h3>
-                        <p class="card-text">
-                            Tolhuis,<br>
-                            Sint-Pietersvliet 7,<br>
-                            2000 Antwerpen
-                        </p>
-                        <p>Phone : 555-555-5555</p>
-                    </div>
-                </div>
-                <div class="p-2 m-3 w-50 row ">
-                    <div class="card-body col">
-                        <table class="table text-light">
-                            <thead>
-                            <tr class="text-center">
-                                <th></th>
-                                <th>Opening hours</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr>
-                                <th scope="row">From monday to saturday :</th>
-                                <td class="text-center">10:00-18:00</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Sunday :</th>
-                                <td class="text-center">Closed</td>
-                            </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
+<footer class="page-footer font-small text-light bg-dark ">
+    <div class="container pt-5">
+        <div class="row ">
+            <div class="col-sm text-light">
+                <h3 class="text-light">B-bike</h3>
+                <p class="text-light hiddedM">
+                    Tolhuis,<br>
+                    Sint-Pietersvliet 7,<br>
+                    2000 Antwerpen<br>
+                    <a href="mailto:b-bike@gmail.com">b-bike@gmail.com</a>
+                </p>
+                <p class="hiddedM text-light">Phone : 555-555-5555</p>
+            </div>
+            <div class="col-sm">
+                <table class="table text-light ">
+                    <thead>
+                    <tr class="text-center">
+                        <th></th>
+                        <th>Opening hours</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <th scope="row">From monday to saturday :</th>
+                        <td class="text-center">10:00-18:00</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Sunday :</th>
+                        <td class="text-center">Closed</td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
+    </div>
 
-        <!-- Copyright -->
-        <div class="footer-copyright text-center py-3">© 2020 Copyright:
-            <a href="https://mdbootstrap.com/"> B-bike, Inc.</a>
-        </div>
-        <!-- Copyright -->
-
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2020 Copyright:
+        B-bike, Inc.
+    </div>
+    <!-- Copyright -->
 </footer>
-
 </body>
 </html>
