cleaned up some classes

--- a/blog.html
+++ b/blog.html
@@ -47,7 +47,7 @@
 </nav>
 
     <h1 class="text-center"></h1>
-    <div class="container pt-5 mt-4 d-flex flex-row">
+    <div class="container pt-5 mt-4 d-flex">
         <br>
         <div class="text-left">
             <img src="resources/bycicle6.jpg" class="image-fluid float-right rounded-sm pl-3" alt="Cycling" width="500" height="300">
@@ -64,7 +64,7 @@
         </div>
     </div>
     <hr>
-    <div class="container pt-5 mt-4 d-flex flex-row">
+    <div class="container pt-5 mt-4 d-flex">
         <div class=" text-right">
             <img src="resources/bycicle7.jpg" class="image-fluid float-left rounded-sm pr-4" alt="Cycling" width="325" height="350">
                 <div class="padding2">
@@ -89,7 +89,7 @@
     </div>
         <br>
     <hr>
-    <div class="container pt-5 mt-2 d-flex flex-row">
+    <div class="container pt-5 d-flex">
         <div class="text-left">
             <img src="resources/bycicle8.jpg" class="image-fluid float-right rounded-sm" alt="Cycling" width="500" height="300">
                 <div class="padding1">
@@ -106,7 +106,7 @@
     </div>
         <br>
     <hr>
-    <div class="container pt-5 mt-2 d-flex flex-row">
+    <div class="container pt-5 mt-2 d-flex">
         <a href="https://awet100.github.io/B-bike.com/contact.html" class="btn btn-secondary wrap-center" role="button">Contact Us</a>
     </div>
     <div class="container pt-5 mt-2 d-flex flex-row">
