--- a/aboutus.html
+++ b/aboutus.html
@@ -5,6 +5,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="keywords" content="Bike, electrical, Antwerpen, cycling,  repairs">
+    <meta name="description"
+          content="We have everything to get you started on the bike from beginners to experienced veterans. We sell, buy and repair all in one. Check our website for more information.">
+    <meta name="author" content="Awet Tesfay, Michiel Coulier, Frank Nsuki, Whitney Aboikoni, Lea Dalibard">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -58,11 +62,10 @@
                     to all. We think that everyone with a heart for the environment should be able to ride an e-bike.
                     But don't
                     worry, even though our products are competitively priced our quality is top notch.<strong> Our
-                        Motto: Alone you can ride fast but together you can ride far.</strong></p>
+                        Motto: Alone you can ride fast but with us you can ride far.</strong></p>
             </div>
         </div>
     </div>
-</div>
 </div>
 <div class="container">
     <div class="row row-cols-4">
@@ -70,7 +73,7 @@
             <div class="card-body">
                 <h3 class="card-title">Our team</h3>
                 <p class="card-text">At B-bike diversity is not only something for the books.<br> We breath
-                    diversity from the board to our employees and suppliers.</p>
+                    inclusivity from the board to our employees and suppliers.</p>
             </div>
             <img class="card-img-bottom" src="resources/aboutus2.jpeg" alt="image of B-bike">
         </div>
@@ -78,7 +81,7 @@
             <div class="card-body">
                 <h3 class="card-title">Social engagement</h3>
                 <p class="card-text">At B-bike we love to give back. Beside our give-back-a-tree project we also
-                    donate 5% of our profits to social projects.</p>
+                    donate 5% of our profits to other social projects.</p>
             </div>
             <img class="card-img-bottom" src="resources/aboutus3.jpeg" alt="image of B-bike">
         </div>
@@ -87,7 +90,6 @@
                 <h3 class="card-title">Testimonials</h3>
                 <p class="card-text">Will look for testimonials to place here with a slider</p>
             </div>
-            <img class="card-img-bottom" src="resources/aboutus1.jpg" alt="image of B-bike">
         </div>
     </div>
     <br>
@@ -97,11 +99,73 @@
     <br>
     <br>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
+
+    <div class="card col-md-6 mt-5 mb-5 my-0 mx-auto">
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="100000">
+            <div class="w-100 carousel-inner" role="listbox">
+                <div class="carousel-item active">
+                    <div class="carousel-caption">
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <img src="http://via.placeholder.com/200x200" alt="" class="rounded-circle img-fluid"/>
+                            </div>
+                            <div class="col-sm-9">
+                                <h3>Gives me hope</h3>
+                                <small>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi
+                                    porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id
+                                    elit.</small>
+                                <small class="smallest mute">- Yayo Dudemous</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="carousel-caption">
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <img src="http://via.placeholder.com/200x200" alt="" class="rounded-circle img-fluid">
+                            </div>
+                            <div class="col-sm-9">
+                                <h3>You will love it.</h3>
+                                <small>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi
+                                    porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id
+                                    elit.</small>
+                                <small class="smallest mute">- Yayo Dudemous</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="carousel-caption">
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <img src="http://via.placeholder.com/200x200" alt="" class="rounded-circle img-fluid">
+                            </div>
+                            <div class="col-sm-9">
+                                <h3>Velvet pouch!</h3>
+                                <small>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi
+                                    porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id
+                                    elit.</small>
+                                <small class="smallest mute">- Yayo Dudemous</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="float-right navi">
+                <a class="" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon ico" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon ico" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+    </div>
 </div>
+
 <!-- Footer -->
 <footer class="page-footer font-small text-light bg-dark ">
     <div class="container pt-5">
