--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 <div class="parallax ">
     <div class="wrap-center row">
         <div class="banner-centered col" id="banner-text">
-            <h2 class="mb-0">Welcome to <strong>B-bike</strong><span class="hiddedM">, have a ride on our site</span></h2>
+            <h2 class="mb-0">Welcome to <strong>B-bike</strong><span class="hiddedM">, have a ride on our site</span>
+            </h2>
             <a href="services.html" class="btn btn-outline-light mt-4 text-uppercase">Discover our bikes</a>
         </div>
     </div>
