Committing to pull

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <section class="media border-bottom row pb-5">
             <img class="d-flex align-self-center  img-thumbnail mx-5 col-sm-12" src="resources/bike1.jpg"
-                 alt="Generic placeholder image" style="max-height: 300px; max-width: 300px;">
+                 alt="Generic placeholder image"
             <div class="media-body col-md-12">
                 <h2 class="mt-0">The bike</h2>
                 <p><strong>B-bike</strong> have been designed to offer optimal comfort in the streets of Antwerpen. Its
