--- a/index.html
+++ b/index.html
@@ -50,12 +50,8 @@
 <header class="parallax ">
     <div class="wrap-center row">
         <div class="banner-centered col" id="banner-text">
-<<<<<<< HEAD
-            <h2 class="mb-0">Welcome to <strong>B-bike</strong><span class="hiddedM">, have a ride on our site</span>
-=======
             <h2 class="mb-0">Welcome to <strong class="text-primary font-weight-bold">B-bike</strong><span
                     class="hiddedM">, have a ride on our site</span>
->>>>>>> c97acba4b5afe0267545076f3966b3ecb98aece5
             </h2>
             <a href="services.html" class="btn btn-outline-light mt-4 text-uppercase">Discover our bikes</a>
         </div>
@@ -70,7 +66,7 @@
 
         <section class="media border-bottom row pb-5">
             <img class="d-flex align-self-center  img-thumbnail mx-5 col-sm-12" src="resources/bike1.jpg"
-                 alt="Generic placeholder image"
+                 alt="Generic placeholder image">
             <div class="media-body col-md-12">
                 <h2 class="mt-0">The bike</h2>
                 <p><strong>B-bike</strong> have been designed to offer optimal comfort in the streets of Antwerpen. Its
